--- a/socket/package.json
+++ b/socket/package.json
@@ -10,7 +10,8 @@
         "express": "^4.18.2",
         "ioredis": "^5.4.1",
         "node-fetch": "^3.3.0",
-        "redis": "^4.6.7",
+        "redis": "^4.7.0",
+        "redis-om": "^0.4.7",
         "ws": "^8.11.0"
     },
     "devDependencies": {
