--- a/metabase/docker-compose.yml
+++ b/metabase/docker-compose.yml
@@ -1,27 +1,27 @@
-version: '3.9'
+version: "3.9"
 services:
-  # metabase:
-  #   image: metabase/metabase:latest
-  #   container_name: metabase
-  #   hostname: metabase
-  #   volumes:
-  #   - /dev/urandom:/dev/random:ro
-  #   ports:
-  #     - 3000:3000
-  #   environment:
-  #     MB_DB_TYPE: postgres
-  #     MB_DB_DBNAME: metabase
-  #     MB_DB_PORT: 25060
-  #     MB_DB_USER: doadmin
-  #     MB_DB_PASS: 
-  #     MB_DB_HOST: postgres-cluster-do-user-12892822-0.c.db.ondigitalocean.com
-  #   networks:
-  #     - metanet1
-  #   healthcheck:
-  #     test: curl --fail -I http://localhost:3000/api/health || exit 1
-  #     interval: 15s
-  #     timeout: 5s
-  #     retries: 5
+  metabase:
+    image: metabase/metabase:latest
+    container_name: metabase
+    hostname: metabase
+    volumes:
+      - /dev/urandom:/dev/random:ro
+    ports:
+      - 3000:3000
+    environment:
+      MB_DB_TYPE: postgres
+      MB_DB_DBNAME: metabaseappdb
+      MB_DB_PORT: 5432
+      MB_DB_USER: metabase
+      MB_DB_PASS: mysecretpassword
+      MB_DB_HOST: postgres
+    networks:
+      - metanet1
+    healthcheck:
+      test: curl --fail -I http://localhost:3000/api/health || exit 1
+      interval: 15s
+      timeout: 5s
+      retries: 5
   postgres:
     image: postgres:latest
     container_name: postgres
