--- a/exchange-scripts-py/Dockerfile
+++ b/exchange-scripts-py/Dockerfile
@@ -7,12 +7,17 @@ WORKDIR /app
 COPY fix/requirements.txt /app/fix/requirements.txt
 COPY fix_md/requirements.txt /app/fix_md/requirements.txt   
 
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r fix/requirements.txt
-RUN pip install --no-cache-dir -r fix_md/requirements.txt
+# Install any needed packages specified in requirements.txt only for prod 
+# RUN pip install --no-cache-dir -r fix/requirements.txt
+# RUN pip install --no-cache-dir -r fix_md/requirements.txt
+
+## Dev install 
+RUN pip install -r fix/requirements.txt
+RUN pip install -r fix_md/requirements.txt
+
 
 # Copy the rest of the application code to /app
 COPY . .
 
 # # Define the default command to run your app
-ENTRYPOINT ["sh", "-c", "sleep infinity"]
+# ENTRYPOINT ["sh", "-c", "sleep infinity"]
