--- a/exchange-scripts-py/docker-compose.yml
+++ b/exchange-scripts-py/docker-compose.yml
@@ -15,4 +15,20 @@ services:
       FIX_VERSION: FIXT.1.1
       DEFAULT_APPL_VER_ID: "9"
       TARGET_COMP_ID: Coinbase
+    ports:
+      - "9000:9000"
+    platform: linux/amd64
+    # extra_hosts:
+    #   - "host.docker.internal:host-gateway"
     command: sleep infinity
+    # command: python3 fix_md/marketdata_request_v7.py
+
+
+  # java-service:
+  #   image: openjdk:23
+  #   volumes:
+  #     - ../matching-engine/target:/app
+  #   working_dir: /app
+  #   command: java -jar matching-engine-1.0-SNAPSHOT.jar
+  #   ports:
+  #     - "7002:7002"
