--- a/exchange-scripts-py/fix/requirements.txt
+++ b/exchange-scripts-py/fix/requirements.txt
@@ -1,2 +1,13 @@
 certifi==2025.1.31
 quickfix-ssl==1.15.1.post4
+
+
+##FOR API SERVICE 
+
+# requirements.txt
+
+# FIX Protocol Engine
+
+fastapi==0.115.12
+uvicorn[standard]==0.34.0
+pydantic==2.11.3
