--- a/ticker-influexDb/docker-compose.yml
+++ b/ticker-influexDb/docker-compose.yml
@@ -1,41 +1,95 @@
-version: "3.9"
+# version: "3.9"
+
+# services:
+#   influxdb:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     container_name: influxdb
+#     environment:
+#       - DOCKER_INFLUXDB_INIT_MODE=setup
+#       - DOCKER_INFLUXDB_INIT_USERNAME=my-user
+#       - DOCKER_INFLUXDB_INIT_PASSWORD=my-password
+#       - DOCKER_INFLUXDB_INIT_ORG=my-org
+#       - DOCKER_INFLUXDB_INIT_BUCKET=my-bucket
+#       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=my-token
+#     ports:
+#       - "8086:8086"
+#     volumes:
+#       - influxdb_data:/var/lib/influxdb2
+
+#   inserter:
+#     build: 
+#       context: .
+#       dockerfile: Dockerfile.python
+#     container_name: inserter
+#     depends_on:
+#       - influxdb
+#     ports:
+#       - "8000:8000"
+#     volumes:
+#       - .:/app
+#     platform: linux/amd64
+#     environment:
+#       - INFLUX_URL=http://influxdb:8086
+#       - INFLUX_TOKEN=my-token
+#       - INFLUX_ORG=my-org
+#       - INFLUX_BUCKET=my-bucket
+#     command: ["uvicorn", "main_influxdb:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+# volumes:
+#   influxdb_data:
+
+
+
+
+version: '3.8'
 
 services:
-  influxdb:
+  influxdb2:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: influxdb
-    environment:
-      - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=my-user
-      - DOCKER_INFLUXDB_INIT_PASSWORD=my-password
-      - DOCKER_INFLUXDB_INIT_ORG=my-org
-      - DOCKER_INFLUXDB_INIT_BUCKET=my-bucket
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=my-token
     ports:
       - "8086:8086"
-    volumes:
-      - influxdb_data:/var/lib/influxdb2
-
-  inserter:
-    build: 
-      context: .
-      dockerfile: Dockerfile.python
-    container_name: inserter
-    depends_on:
-      - influxdb
-    ports:
-      - "8000:8000"
+      - "9999:9999"
+    env_file:
+      - .env
+    environment:
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB2_ADMIN_USERNAME}
+      DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB2_ADMIN_PASSWORD}
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB2_ADMIN_TOKEN}
+      DOCKER_INFLUXDB_INIT_ORG: docs
+      DOCKER_INFLUXDB_INIT_BUCKET: home
     volumes:
       - .:/app
+      - type: volume
+        source: influxdb2-data
+        target: /var/lib/influxdb2
+      - type: volume
+        source: influxdb2-config
+        target: /etc/influxdb2
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.python
+    volumes:
+      - .:/app
+    ports:
+      - "9000:9000"
+      - "8000:8000"
     platform: linux/amd64
+    depends_on:
+      - influxdb2
     environment:
-      - INFLUX_URL=http://influxdb:8086
-      - INFLUX_TOKEN=my-token
-      - INFLUX_ORG=my-org
-      - INFLUX_BUCKET=my-bucket
-    command: python3 main.py
+      INFLUXDB_URL: "http://influxdb2:8086"
+    command: ["uvicorn", "main_influxdb:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+
+
 
 volumes:
-  influxdb_data:
+  influxdb2-data:
+  influxdb2-config:
