--- a/ticker-influexDb/.env
+++ b/ticker-influexDb/.env
@@ -1,4 +1,4 @@
-export INFLUX_URL="http://your_influxdb_ip_or_hostname:8086"
-export INFLUX_TOKEN="your-real-influxdb-token"
-export INFLUX_ORG="your-influxdb-org"
-export INFLUX_BUCKET="your-influxdb-bucket"
+# InfluxDB Administrator credentials
+INFLUXDB2_ADMIN_USERNAME=admin
+INFLUXDB2_ADMIN_PASSWORD=MyInitialAdminPassword
+INFLUXDB2_ADMIN_TOKEN=MyInitialAdminToken0==
